# MinecraftClone

./: CMakeLists.txt  README.md
shaders/: compile.bat  texture_frag.glsl  texture_frag.spv  texture_vert.glsl  texture_vert.spv
src/: app.cpp  app.h  logger.h  main.cpp  vulkan_base.cpp  vulkan_base.h
src/game_engine/: block.cpp  block.h  cameramanager.cpp  cameramanager.h  chunk.cpp  chunk.h  vertex.h  window.cpp  window.h  worldmanager.cpp  worldmanager.h
src/vulkan_base/: vulkan_creates.cpp  vulkan_pipeline.cpp  vulkan_render.cpp  vulkan_renderpass.cpp  vulkan_swapchain.cpp  vulkan_utils.cpp
